# Android-Cam-Bridge

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
android/: build.gradle.kts  settings.gradle.kts
android/.android-user/: analytics.settings  debug.keystore
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/acb/androidcam/: AppLog.kt  AppReleaseUpdateChecker.kt  AudioAacEncoder.kt  CameraController.kt  CameraSurfacePipeline.kt  CaptureModels.kt  MainActivity.kt  PreviewController.kt  StreamingService.kt  UsbAccessoryTransport.kt  V2MediaClient.kt  VideoAvcEncoder.kt
android/app/src/main/res/layout/: activity_main.xml  app_update_section.xml  spinner_dropdown_item.xml  spinner_item.xml
android/app/src/main/res/layout-land/: activity_main.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/values-zh-rCN/: strings.xml
android/app/src/main/res/xml/: usb_accessory_filter.xml
docs/: GUI.md  INSTALLER.md  RELEASE.md  RELEASE_NOTES.md  SETUP.md  SETUP.zh-CN.md  TROUBLESHOOTING.md  TROUBLESHOOTING.zh-CN.md  USB_NATIVE.md  VIRTUALCAM_BRIDGE.md
drivers/aoa-winusb/: acb-aoa.inf  install-driver.ps1  sign-driver.ps1
installer/inno/: acb.iss
installer/wix/: Product.wxs
protocol/: README.md
protocol/proto/: signaling.proto
protocol/v2/: README.md  media_frame.md
scripts/: bootstrap.ps1  build-installer.ps1  build-local.ps1  build.ps1  cmake-common.ps1  embed-receiver.ps1  install-acb.ps1  install-obs-plugin.ps1  package.ps1  publish-gui.ps1  run-gui.ps1  send-vcam-command.ps1  sign-aoa-driver.ps1  sign-release.ps1  start-virtualcam.ps1  stop-virtualcam.ps1  test-v2-ws.ps1  uninstall-acb.ps1  virtualcam_consumer.py
windows/gui/Acb.Gui/: Acb.Gui.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
windows/gui/Acb.Gui/Pages/: DiagnosticsPage.xaml  DiagnosticsPage.xaml.cs  HomePage.xaml  HomePage.xaml.cs  StreamPage.xaml  StreamPage.xaml.cs
windows/gui/Acb.Gui/Services/: AppLogger.cs  AppPreferencesStore.cs  BundledReceiverData.cs  ReceiverApiClient.cs  ReleaseUpdateService.cs
windows/obs-plugin/: CMakeLists.txt
windows/obs-plugin/data/locale/: en-US.ini  zh-CN.ini
windows/obs-plugin/src/: plugin.cpp  plugin_stub.cpp
windows/receiver/: CMakeLists.txt
windows/receiver/include/: receiver_server.h
windows/receiver/src/: main.cpp  receiver_server.cpp  usb_aoa_transport.cpp  usb_aoa_transport.h
windows/virtualcam-bridge/: CMakeLists.txt
windows/virtualcam-bridge/src/: main.cpp
windows/virtualcam-driver/: CMakeLists.txt
windows/virtualcam-driver/src/: dllmain.cpp  guids.h  shared_frame.h  virtualcam.def  virtualcam_filter.cpp  virtualcam_filter.h  virtualcam_pin.cpp  virtualcam_pin.h
